# rzephir

./: Dockerfile
.github/actions-rs/: libzephir-grcov.yml
.github/workflows/: test.yml
libzephir/: Cargo.toml
libzephir/.github/: test_with_coverage.sh
libzephir/src/: lib.rs
libzephir/src/compiler/: compiled_policy.rs  compiler.rs
libzephir/src/err/: mod.rs
libzephir/src/identity/: group.rs  identity.rs  mod.rs  role.rs  subject.rs
libzephir/src/policy/: allowed_result.rs  match_result.rs  mod.rs  policy.rs  policy_set.rs
libzephir/src/storage/: group_manager.rs  identity_manager.rs  mod.rs  policy_manager.rs
libzephir/src/utils/: glob_to_regex.rs
zephir/: Cargo.toml
zephir/src/: main.rs
zephir/src/err/: mod.rs
zephir/src/handlers/: allowed.rs  group.rs  mod.rs  policy.rs
