[package]
name = "libzephir"
version = "0.1.0"
authors = ["Alessandro Chitolina <alekitto@gmail.com>"]
edition = "2018"

[dependencies]
darling = "0.12"
regex = "1"
serde_json = "1.0"
uluru = "1.1.1"

[dependencies.sqlx]
version = "0.5.1"
features = [ "all-databases", "runtime-async-std-native-tls" ]
